# Practica-EDA-II

./: CMakeLists.txt  README.MD  VIDEO PROYECTO EDA  main.c
headers/: defines.h  dicctionary_topic.h  friends_graph.h  friends_stack.h  manage_friends_stack.h  manage_requests_queue.h  publications_users.h  requests_queue.h  requests_stack.h  user.h  user_list.h
resources/: friends.txt  publications.txt  requests.txt  users.txt
sources/: dicctionary_topic.c  friends_graph.c  friends_stack.c  main.c  manage_friends_stack.c  manage_requests_queue.c  publications_users.c  requests_queue.c  requests_stack.c  user.c  user_list.c
